Fixed alignment with the term selectors.

--- a/war/Scheduler.css
+++ b/war/Scheduler.css
@@ -99,7 +99,7 @@ h1 {
 .termView div {
 	margin: 2px;
 	padding: 2px;
-	float: left;
+	display: inline;
 	border-color: grey;
 	border-style: solid;
 	border-width: 1px;
